--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "now": {
     "public": false,
-    "alias": "wesley.tech"
+    "alias": "www.wesley.tech"
   },
   "scripts": {
     "build": "browserify main.js -o public/bundle.js -v",
@@ -20,11 +20,7 @@
   "devDependencies": {
     "browserify": "^14.4.0",
     "watchify": "^3.9.0",
-    "webpack": "^3.7.1"
+    "http-server": "^0.10.0"
   },
-  "dependencies": {
-    "browserify": "^14.4.0",
-    "http-server": "^0.10.0",
-    "lodash": "^4.17.4"
-  }
+  "dependencies": {}
 }
