--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wdr-portfolio",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "new portfolio stylin",
   "main": "index.js",
   "repository": "https://www.github.com/wesleydrobinson/tachy-home",
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "browserify main.js -o public/bundle.js -v",
-    "deploy": "now public",
+    "deploy": "now && now alias",
     "dev": "watchify main.js -o public/bundle.js -v",
     "start": "http-server"
   },
