revised npm scripts; split deploy, introduced "release"

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "scripts": {
     "build": "webpack",
-    "deploy": "yarn run build && now && now alias",
+    "deploy": "yarn run build && now",
     "dev": "webpack-dev-server --hot",
     "start": "node server.js",
+    "release": "now alias",
     "watch": "webpack --progress --watch"
   },
   "devDependencies": {
